# cosmosapien-readteam-cli

./: .cosmosrc.example  .coverage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.md.new  SECURITY.md  coverage.xml  docker-compose.yml  pyproject.toml  redteam.toml  test_detectors.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cosmosapien/: __init__.py
cosmosapien/auth/: __init__.py  manager.py
cosmosapien/cli/: __init__.py  automated_testing.py  context.py  cosmic_ui.py  detect_vuln.py  findings_generator.py  gptoss_findings.py  gptoss_findings_v2.py  local_models.py  main.py  redteam.py  redteam_simple.py  simple_redteam.py
cosmosapien/cli/commands/: orchestrate.py
cosmosapien/config/: loader.py  redteam.yaml
cosmosapien/core/: __init__.py  agent_system.py  config.py  job_distributor.py  local_manager.py  model_library.py  models.py  provider_info.py  router.py  smart_router.py
cosmosapien/detectors/: __init__.py  advanced_detector.py  hackathon_detectors.py  schema.py  vulnerability_detector.py
cosmosapien/memory/: __init__.py  manager.py
cosmosapien/models/: __init__.py  base.py  claude_model.py  ensemble.py  gemini_model.py  grok_model.py  huggingface_model.py  llama_model.py  local_rules.py  ollama_model.py  openai_model.py  perplexity_model.py
cosmosapien/plugins/: __init__.py  manager.py
cosmosapien/redteam/: __init__.py  automated_generator.py  models.py  orchestrator.py
cosmosapien/redteam/engine/: __init__.py  classifier.py  novelty_detector.py  redactor.py  router.py
cosmosapien/redteam/packs/: __init__.py  manager.py
cosmosapien/redteam/packs/builtin/: policy_edges.yaml
cosmosapien/schemas/: findings.py
cosmosapien/taxonomy/: manipulation.py
cosmosapien/visual/: __init__.py  generator.py
cosmosapien_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: MODEL_LIBRARY.md  README.md
examples/: advanced_test_cases.json  investment_test.json  manipulation_test.json  model_library_usage.py  model_template.json  sample.json
notebooks/: ai_redteaming_expert_assessment.ipynb
scripts/: hackathon_test_suite.py
tests/: __init__.py  test_config.py  test_manipulation_taxonomy.py  test_redteam.py  test_vulnerability_detector.py
